// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EqualsIcon [common] example testing should match snapshot(s) for 1.default 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EqualsIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M2 5v2h12V5H2zm0 6h12V9H2v2z"
  />
</Icon>
`;

exports[`EqualsIcon [common] example testing should match snapshot(s) for 2.clickable 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EqualsIcon"
  isBadge={false}
  isClickable={true}
  isDisabled={false}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M2 5v2h12V5H2zm0 6h12V9H2v2z"
  />
</Icon>
`;

exports[`EqualsIcon [common] example testing should match snapshot(s) for 3.disabled 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-EqualsIcon"
  isBadge={false}
  isClickable={false}
  isDisabled={true}
  size={16}
  viewBox="0 0 16 16"
>
  <path
    d="M2 5v2h12V5H2zm0 6h12V9H2v2z"
  />
</Icon>
`;
